# mlrc22-like-shapley-love-the-core

./: .dockerignore  .dvcignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: code-quality.yaml
src/experiments/: constants.py  dataset.py  feature_valuation_experiments.py  utility.py  utils.py
src/ml_reproducibility_challenge/: constants.py  utils.py
src/ml_reproducibility_challenge/experiments/: data_removal_dog_vs_fish_experiment.py  data_removal_synthetic_experiment.py  data_valuation_dog_vs_fish_experiment.py  data_valuation_synthetic_experiment.py  feature_valuation_experiments.py  fixing_mislabeled_data_experiment.py  noisy_data_experiment.py
src/mlrc22/: constants.py  dataset.py  least_core.py  nucleolus.py  plotting.py  utils.py
src/mlrc22/experiments/: data_valuation_dog_vs_fish_experiment.py  data_valuation_synthetic_experiment.py  feature_valuation_experiments.py  feature_valuation_least_core_experiments.py  feature_valuation_nucleolus_experiments.py  fixing_mislabeled_data_experiment.py  noisy_data_experiment.py
