[tool.poetry]
name = "ml-reproducibility-challenge-2022"
version = "0.1.0"
description = "Code for reproducing the experiments of 'If You Like Shapley Then You’ll Love the Core'"
authors = ["appliedAI gGmbH"]
readme = "README.md"
packages = [{include = "experiments", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
torch = "^1.13.1"
tqdm = "^4.64.1"
notebook = "^6.5.2"
ipywidgets = "^8.0.4"
pydvl = {git = "https://github.com/appliedAI-Initiative/pyDVL", rev = "6c1f2d94122ddbccc09f7231946355ff8de78197"}
matplotlib = "^3.6.2"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
profile = "black"